@@ -120,6 +120,7 @@ Version 1.11.7+dev:
      wesnothd executable) interpreting special markup at the beginning of file
      names such as "#foo.map".
    * Fixed bug with modifications dependency check dialogs (bug #21365)
+   * Fixed bug with scrollbar overlaying mp description text (bug #21364)
 
 Version 1.11.7:
  * Add-ons client:
